# myutils

./: README.md  pyproject.toml
src/myutils/: __init__.py
src/myutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/myutils/auth/: __init__.py  login_simulator.py  login_with_retry.py  password_strength_checker.py  password_strength_checker_re.py
src/myutils/eligibility/: __init__.py  eligibilty_check.py  grading_system.py
src/myutils/math_ops/: __init__.py  adv_calc.py  bmi.py  calc.py  compare_2_nums.py  guess_the_num.py  pascal_triangle.py  prime_checker.py  prime_no_check.py  sum_natural_nums.py
src/myutils/operations/: __init__.py  phonebook_ops.py
src/myutils/storage/: __init__.py  phonebook_storage.py
src/myutils/text_ops/: __init__.py  data_cleaning.py  email_task.py  frequency.py  remove_dupes.py  text_analyzer.py  text_cleaning.py  unique_word_extract.py
src/myutils/validation/: __init__.py  email_validator.py  email_validator_re.py
