[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myutils"
version = "0.1.0"
description = "Reusable utility modules for authentication, validation, text processing, and math operations"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Khushi Sharma" }
]

dependencies = [
    "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipykernel"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

